Logo Overflow fix

--- a/css/ig.css
+++ b/css/ig.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 /* ------------------------경민(헤더)------------------------ */
@@ -18,20 +19,30 @@ header {
     border: none;
     background-color: rgb(83, 76, 76);
 }
+
 .logo {
-    max-height: 4rem;
+    width: 10rem;
     display: flex;
-    align-items: center;
-}
-.image-box {
-    overflow: hidden;
+    max-height: 4rem;
+    max-width: 10rem;
     margin: 0 auto;
-    width: 15rem;
+    align-items: center;
+    /* justify-content: center; */
 }
 
-.image-box image {
-    max-width: 5rem;
+.image-box {
+    width: inherit;
+    height: inherit;
 }
+
+/* .image-box a {width: 15rem;
+    height: 15rem;
+    margin: 0 auto;
+} */
+
+/* .image-box image {width: inherit;
+    height: inherit;
+} */
 
 .image-box-for-icon {
     width: 1.5rem;
@@ -99,6 +110,7 @@ header {
     font-weight: bold;
     color: #333333;
 }
+
 /* ------------------------end of 경민------------------------ */
 body {
     margin: 0;
@@ -109,20 +121,24 @@ body {
     flex-direction: column;
     align-items: left;
 }
+
 .horizontal-box {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
+
 .footer-section {
     width: 100%;
     position: absolute;
     /* bottom: 0; */
 }
+
 .footer-layer2 {
     height: 100px;
     font-size: 11px;
 }
+
 .footer-layer3 {
     width: 100%;
     background-color: #333;
@@ -198,7 +214,7 @@ body {
     font-family: fantasy;
 }
 
-#menubar .p {
+/* #menubar .p {
     font-family: fantasy;
     text-align: center;
 }
@@ -207,7 +223,7 @@ body {
     font-family: fantasy;
     font-size: 12px;
     text-align: center;
-}
+} */
 
 .clothes {
     display: flex;
@@ -218,7 +234,7 @@ body {
     width: 20%;
 }
 
-/* img 파일은 img-box에 담을 것 -> 모든 이미지 공통 사항 이라 element style 지정정 */
+/* img 파일은 img-box에 담을 것 -> 모든 이미지 공통 사항 이라 element style 지정 */
 img {
     width: 100%;
 }
@@ -240,27 +256,45 @@ img {
     width: 10vw;
 }
 
+/* 텍스트 박스 */
+.text-box {
+    margin: 1rem auto;
+    font-family: fantasy;
+    text-align: center;
+    font-size: 12px;
+}
+
+.text-box strong {
+    font-size: 20px;
+    letter-spacing: 1px;
+}
+
+.text-box p {
+    margin: 0.5rem;
+}
+
 /* ---------------------상품 제목--------------------- */
 
 #menubar .product-title {
     text-align: center;
 }
 
-#menubar .product-title > a:link {
+#menubar .product-title>a:link {
     color: black;
     text-decoration: none;
 }
 
-#menubar .product-title > a:visited {
+#menubar .product-title>a:visited {
     color: black;
 }
 
-#menubar .product-title > a:hover {
+#menubar .product-title>a:hover {
     animation-name: rainbowLoop;
     animation-duration: 6s;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
 }
+
 /* -------------------------------------------------- */
 
 .up-border {
@@ -271,8 +305,10 @@ img {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center; /* 수평 중앙 정렬 */
-    align-items: center; /* 수직 중앙 정렬 (필요시 추가) */
+    justify-content: center;
+    /* 수평 중앙 정렬 */
+    align-items: center;
+    /* 수직 중앙 정렬 (필요시 추가) */
     text-align: center;
     margin: 0 auto;
 }
@@ -303,21 +339,27 @@ img {
     0% {
         color: red;
     }
+
     16.6% {
         color: orange;
     }
+
     33.3% {
         color: yellow;
     }
+
     50% {
         color: green;
     }
+
     66.6% {
         color: blue;
     }
+
     83.3% {
         color: violet;
     }
+
     100% {
         color: red;
     }
@@ -327,25 +369,32 @@ img {
     0% {
         font-size: 25px;
     }
+
     16.6% {
         font-size: 15px;
     }
+
     33.3% {
         font-size: 25px;
     }
+
     50% {
         font-size: 15px;
     }
+
     66.6% {
         font-size: 25px;
     }
+
     83.3% {
         font-size: 15px;
     }
+
     100% {
         font-size: 25px;
     }
 }
+
 /* --------------------------------------------------- */
 
 .fixed-box {
@@ -384,6 +433,7 @@ img {
 .normal-height {
     height: 60vh;
 }
+
 .short-height {
     height: 30vh;
 }
